erDiagram
    Authors {
        int Id PK
        text FirstName
        text LastName
        text Bio
        text CreatedAt
        text UpdatedAt
    }

    Categories {
        int Id PK
        text Name
        text Description
        text CreatedAt
        text UpdatedAt
    }

    Publishers {
        int Id PK
        text Name
        text Address
        text Phone
        text CreatedAt
        text UpdatedAt
    }

    Books {
        int Id PK
        text Title
        text ISBN
        int PublisherId FK
        int PublicationYear
        text Description
        text ShelfLocation
        real ReplacementCost
        text CreatedAt
        text UpdatedAt
    }

    BookCopies {
        int Id PK
        int BookId FK
        int Status
        text CreatedAt
        text UpdatedAt
    }

    BookAuthors {
        int BookId FK
        int AuthorId FK
    }

    BookCategories {
        int BookId FK
        int CategoryId FK
    }

    Members {
        int Id PK
        text FirstName
        text LastName
        text Email
        text Phone
        int Status
        int MemberType
        text Department
        text CreatedAt
        text UpdatedAt
    }

    LibraryCards {
        int Id PK
        int MemberId FK
        text CardNumber
        text ExpiryDate
        int Status
        text CreatedAt
        text UpdatedAt
    }

    ApplicationUsers {
        int Id PK
        text Username
        text PasswordHash
        int Role
        text CreatedAt
        text UpdatedAt
    }

    BorrowRecords {
        int Id PK
        int BookCopyId FK
        int MemberId FK
        text BorrowDate
        text DueDate
        text ReturnDate
        int Status
        int RenewalCount
        int CheckedOutByUserId FK
        int ReturnedByUserId FK
        text CreatedAt
        text UpdatedAt
    }

    LateFees {
        int Id PK
        int BorrowRecordId FK
        int FeeType
        real Amount
        text DateIncurred
        int Status
        int WaivedByUserId FK
        text CreatedAt
        text UpdatedAt
    }

    FeePayments {
        int Id PK
        int LateFeeId FK
        real Amount
        text PaymentDate
        text CreatedAt
        text UpdatedAt
    }

    Reservations {
        int Id PK
        int BookId FK
        int MemberId FK
        text ReservationDate
        text ExpiryDate
        int Status
        text CreatedAt
        text UpdatedAt
    }

    InventoryLogs {
        int Id PK
        int BookCopyId FK
        int Action
        int Quantity
        text Note
        int PerformedByUserId FK
        text CreatedAt
        text UpdatedAt
    }

    AuditLogs {
        int Id PK
        int UserId FK
        text Action
        text EntityName
        int EntityId
        text Details
        text Timestamp
    }

    Publishers ||--o{ Books : "publishes"
    Books ||--o{ BookCopies : "has"
    Books ||--o{ BookAuthors : "written by"
    Authors ||--o{ BookAuthors : "authored"
    Books ||--o{ BookCategories : "categorized in"
    Categories ||--o{ BookCategories : "contains"
    Members ||--o{ LibraryCards : "has"
    Members ||--o{ BorrowRecords : "borrows"
    Members ||--o{ LateFees : "incurs"
    Members ||--o{ Reservations : "reserves"
    Books ||--o{ Reservations : "reserved"
    BookCopies ||--o{ BorrowRecords : "checked out"
    BookCopies ||--o{ InventoryLogs : "logged"
    BorrowRecords ||--o{ LateFees : "generates"
    LateFees ||--o{ FeePayments : "paid via"
    ApplicationUsers ||--o{ BorrowRecords : "CheckedOutBy"
    ApplicationUsers ||--o{ BorrowRecords : "ReturnedBy"
    ApplicationUsers ||--o{ LateFees : "WaivedBy"
    ApplicationUsers ||--o{ InventoryLogs : "performed"
    ApplicationUsers ||--o{ AuditLogs : "actions"
